@@ -162,7 +162,7 @@ class FirebaseDatabaseHelper {
 
         rating.put(USER_ID_FIELD, user_id);
         rating.put(MOVIE_ID_FIELD, movie_id);
-        rating.put(SCORE_ID_FIELD, new Integer(score));
+        rating.put(SCORE_ID_FIELD, Integer.valueOf(score));
 
         //This method updates existing documents if they exists or creates if they dont. Also removes duplicates if there are any
         fireStore.collection(RATING_PATH).whereEqualTo(MOVIE_ID_FIELD, movie_id).whereEqualTo(USER_ID_FIELD, user_id).get().addOnCompleteListener(e -> {
